# rusty-ag

./: Cargo.toml  Procfile  Rocket.toml
client/art_gallery/: package-lock.json  package.json
client/art_gallery/public/: index.html
client/art_gallery/src/: App.css  App.js  constants.js  helper.js  index.css
client/art_gallery/src/artist/: Artist.js  ArtistEntity.js  ArtistEntityDescription.js  ArtistEntityImage.js
client/art_gallery/src/artmovement/: ArtMovementCell.js  ArtMovementGrid.js
client/art_gallery/src/artwork/: Artwork.css  Artwork.js  ArtworkCell.css  ArtworkEntity.js  ArtworkEntityDescription.js  ArtworkEntityImage.css  ArtworkEntityImage.js  ArtworksGrid.js  StyleTransferButton.js
client/art_gallery/src/common/: BlackAndWhiteLink.css  BlackAndWhiteLink.js  CubeSpinner.css  CubeSpinner.js  Header.css  Header.js  LoadablePhoto.css  LoadablePhoto.js  UploadButton.css  UploadButton.js
client/art_gallery/src/entity/: ArtistEntity.css  ArtistEntity.js  ArtworkEntity.css  ArtworkEntity.js  Entity.css  Entity.js  EntityDescription.css  EntityDescription.js  EntityImage.css  EntityImage.js  GridView.css  GridView.js  Paintings.js
client/art_gallery/src/error/: NoContentMessage.css  NoContentMessage.js  NoPhotoAvailable.css  NoPhotoAvailable.js
client/art_gallery/src/grid/: ArtMovementCell.css  (+9 more)
src/: artist.rs  artwork.rs  main.rs  movement.rs  popular.rs  react_routes.rs  search.rs  wikiartapi.rs
src/style_transfer/: .network.rs  decoder.pt  encoder.pt  mod.rs
static/: artists.json  styles.json
utils/: fetch-all-artists.sh  fetch-all-styles.sh
(+13 files in other folders)
