[package]
name = "ag-rusty"
version = "0.1.0"
authors = ["kamil <kamil.burdzinski@student.put.poznan.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
lazy_static = "1.4.0"
futures = "0.3"
tokio = { version = "1.8", features = ["full"] }
scraper = "0.11.0"
tch = "0.1.7"
tempfile = "3.1.0"
base64 = "0.12.3"
md5 = "0.7.0"
image = "0.23.9"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
